src/main/java/com/example/springbootboard/Error/Exception/AppException.java
package com.example.springbootboard.Error.Exception;

import com.example.springbootboard.Error.ErrorCode;
import lombok.*;

@Getter
@Setter
@AllArgsConstructor
@NoArgsConstructor
@ToString
public class AppException extends RuntimeException {
    private ErrorCode errorCode;

    public AppException(ErrorCode errorCode, String message) {
        super(message);
        this.errorCode = errorCode;
    }
}
